--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
+                    <a href="#"><i class="fa-brands fa-facebook"></i></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </ul>
             </div>
         </div>
