--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="sidebar_menu">
             <div class="logo">
-                <a href="#">Apna College</a>
+                <a href="#"> Photography page</a>
             </div>
 
             <div class="btn_two">
