--- a/spotify_clone/index.html
+++ b/spotify_clone/index.html
@@ -137,9 +137,62 @@
                     <p class="card-info">Artist</p>
                 </div>
             </div>
+            <h2>Popular albums and singles</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="ashiqui2.jpg" alt="error" class="card-imgss">
+                    <p class="card-title">ashiqui2</p>
+                    <p class="card-info">playlist</p>
+                </div>
+                <div class="card">
+                    <img src="ye-jawani-hai-deewaani1.jpg" alt="error" class="card-imgss">
+                    <p class="card-title">yeh jawaani hai deewaani</p>
+                    <p class="card-info">playlist</p>
+                </div>
+                <div class="card">
+                    <img src="sanam-teri-kasam.jpg" alt="error" class="card-imgss">
+                    <p class="card-title">sanam Teri kasam</p>
+                    <p class="card-info">playlist</p>
+                </div>
+                <div class="card">
+                    <img src="finding-her.webp" alt="error" class="card-imgss">
+                    <p class="card-title">finding her</p>
+                    <p class="card-info">playlist</p>
+                </div>
+                <div class="card">
+                    <img src="Raanjhan.jpg" alt="error" class="card-imgss">
+                    <p class="card-title">Raanjhan</p>
+                    <p class="card-info">playlist</p>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="line"></div>
+            </div>
 
         </div>
-        <div class="music-player">music player</div>
+        <div class="music-player">
+            <div class="album">
+                <img src="finding-her.webp" alt="error" class="album-img">
+                <div class="content">finding her</div>
+                <div class="content">sachet-prampara</div>
+                <img src="" alt="">
+            </div>
+            <div class="player">
+                <div class="players-controls">
+                    <img src="player_icon1.png" alt="error"  class ="player-control-icon">
+                    <img src="player_icon2.png" alt="error" class = "player-control-icon">
+                    <img src="player_icon3.png" alt="error" class = "player-control-icon" style="opacity: 1; font-size: 2rem; height: 1.5rem;">
+                    <img src="player_icon4.png" alt="error" class = "player-control-icon">
+                </div>
+                <div class="playback-bar">
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar" step="1">
+                    <span class="tot-time">03:33</span>
+                </div>
+            </div>
+            <div class="controls"></div>
+        </div>
+
 
     </div>
 </body>
