--- a/spotify_clone/index.html
+++ b/spotify_clone/index.html
@@ -70,7 +70,7 @@
                     <i class="fa-regular fa-user nav-items"></i>
                 </div>
             </div>
-            
+
             <h2>Recently played</h2>
             <div class="card-container">
                 <div class="card">
@@ -165,6 +165,34 @@
                     <p class="card-info">playlist</p>
                 </div>
             </div>
+            <h2>Trending now near you</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="hot-hits.jpg" alt="error" class="card-img">
+                    <p class="card-title">Top 50-Global</p>
+                    <p class="card-info">Hottest Hindi music that india is listening to.....</p>
+                </div>
+                <div class="card">
+                    <img src="spotify_artist_banner.jpg" alt="error" class="card-img">
+                    <p class="card-title">spotify artist banner</p>
+                    <p class="card-info">Your favorite artists in one place...</p>
+                </div>
+                <div class="card">
+                    <img src="top_20.jpg" alt="error" class="card-img">
+                    <p class="card-title">Top 20-Global</p>
+                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                </div>
+                <div class="card">
+                    <img src="bollywood mush.jpg" alt="error" class="card-img">
+                    <p class="card-title">Bollywood mush</p>
+                    <p class="card-info">let these song be the background score to.....</p>
+                </div>
+                <div class="card">
+                    <img src="discover-weekly.webp" alt="error" class="card-img">
+                    <p class="card-title">Discover discover-weekly</p>
+                    <p class="card-info">your shortcut to hidden gems,cuts,hidden.......</p>
+                </div>
+            </div>
             <div class="footer">
                 <div class="line"></div>
             </div>
@@ -173,16 +201,16 @@
         <div class="music-player">
             <div class="album">
                 <img src="finding-her.webp" alt="error" class="album-img">
-                <div class="content">finding her</div>
-                <div class="content">sachet-prampara</div>
-                <img src="" alt="">
+                <div class="content">finding her <br> (sachet-prampara)</div>
+                <!-- <div class="contents">sachet-prampara</div> -->
             </div>
             <div class="player">
                 <div class="players-controls">
-                    <img src="player_icon1.png" alt="error"  class ="player-control-icon">
-                    <img src="player_icon2.png" alt="error" class = "player-control-icon">
-                    <img src="player_icon3.png" alt="error" class = "player-control-icon" style="opacity: 1; font-size: 2rem; height: 1.5rem;">
-                    <img src="player_icon4.png" alt="error" class = "player-control-icon">
+                    <img src="player_icon1.png" alt="error" class="player-control-icon">
+                    <img src="player_icon2.png" alt="error" class="player-control-icon">
+                    <img src="player_icon3.png" alt="error" class="player-control-icon"
+                        style="opacity: 1; font-size: 2rem; height: 1.5rem;">
+                    <img src="player_icon4.png" alt="error" class="player-control-icon">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
@@ -190,8 +218,15 @@
                     <span class="tot-time">03:33</span>
                 </div>
             </div>
-            <div class="controls"></div>
+            <div class="controls">
+                <i class="fa-solid fa-microphone"></i>
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-computer"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <input type="range" min="0" max="100" class="volume-bar" step="1" value="50">
+            </div>
         </div>
+
 
 
     </div>
